Inclusão do registro da fila para processar o pagamento do pedido

--- a/TesteOpah/src/main/resources/application.yaml
+++ b/TesteOpah/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+app:
+  broker:
+    exchange: 
+      novoPedidoEvent: app.novopedidoevent
+    queue:
+      novoPedidoEventQueue:
+        name: app.novopedidoevent
+        
 spring:
   application:
     name: TesteOpah
